updated dockerfile to new version-free format

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,14 +6,15 @@ WORKDIR /home
 
 # Install needed packages
 ENV DEBIAN_FRONTEND noninteractive
-RUN rm -rf /var/lib/apt/lists/*
+#RUN rm -rf /var/lib/apt/lists/*
 RUN apt-get -qq update
 RUN apt-get install -y curl build-essential git libz-dev vim zip
 RUN apt-get install -y python-dev python-setuptools python-pip python-tk python3-dev
-RUN python -m pip install numpy scipy
-RUN git clone https://github.com/nlapier2/Metalign.git && cd Metalign && ./setup_libraries.sh
-# A quick way to update the dockerfile
-RUN cd Metalign/ && git pull origin master && echo "Metalign docker version 0.9.1"
+RUN python -m pip install numpy scipy virtualenv
+RUN git clone https://github.com/dkoslicki/CMash.git && cd CMash && pip install -r requirements.txt && cd ..
+
+# Copy current directory (including Metalign repo) into /home
+ADD . /home
 
 ENTRYPOINT ["python3"]
 #
